--- a/index.html
+++ b/index.html
@@ -24,20 +24,74 @@
         </header>
 
         <section class="home">
-            <video class="video-slide" src="./images/mare.mp4" autoplay muted loop></video>
-            <div class="content">
+            <video class="video-slide active" src="./images/mare.mp4" autoplay muted loop></video>
+            <video class="video-slide" src="./images/naturarelax.mp4" autoplay muted loop></video>
+            <video class="video-slide" src="./images/auto.mp4" autoplay muted loop></video>
+            <video class="video-slide" src="./images/campeggio.mp4" autoplay muted loop></video>
+            <video class="video-slide" src="./images/ontheroad.mp4" autoplay muted loop></video>
+            <div class="content active">
                 <h1>Wonderful. <br><span>Island</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#">Read More</a>
+            </div>
+            
+            <div class="content">
+                <h1>Feel Nature.<br><span>Relax</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <div class="content">
+                <h1>Adventures.<br><span>Off Road</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                       Excepteur sint occaecat cupidatat non proident, 
                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <a href="#">Read More</a>
+            </div>  
+
+            <div class="content">
+                <h1>Camping. <br><span>Enjoy</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#">Read More</a>
+            </div>    
+            
+            <div class="content">
+                <h1>Road Trip.<br><span>Toghether</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#">Read More</a>
+            </div>  
+
             </div>
             <div class="media-icons">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+
+            <div class="slide-navigation">
+                <div class="nav-btn active"></div>
+                <div class="nav-btn"></div>
+                <div class="nav-btn"></div>
+                <div class="nav-btn"></div>
+                <div class="nav-btn"></div>
             </div>
 
         </section>
